--- a/lovelace/00_home_modern/group_cameras.yaml
+++ b/lovelace/00_home_modern/group_cameras.yaml
@@ -10,5 +10,5 @@
         action: more-info
     - state:
         - color: "#BAC0C6"
-          icon: "mdi:camera"
+          icon: "mdi:camera-outline"
           operator: default
