--- a/lovelace/00_home_modern.yaml
+++ b/lovelace/00_home_modern.yaml
@@ -122,3 +122,22 @@ cards:
                               height: 30px !important;
                               width: 30px !important;
                             }
+                  - type: conditional
+                    conditions:
+                      - entity: input_text.selected_category
+                        state: none
+                    card:
+                      type: conditional
+                      conditions:
+                        - entity: media_player.spotify
+                          state_not: idle
+                      card:
+                        type: 'custom:mini-media-player'
+                        entity: media_player.spotify
+                        artwork: none
+                        hide:
+                          power_state: false
+                          source: true
+                          volume: true
+                        icon: 'mdi:spotify'
+                        name: Spotify Aleix
