:lipstick: Improved a lot of things

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -13,6 +13,15 @@ homeassistant:
 
 logger:
   default: info
+  logs:
+    beewi_smartclim: debug
+    homeassistant.components.mitemp_bt.sensor: debug
+    mitemp_bt.mitemp_bt_poller: debug
+    homeassistant.loader: debug
+    homeassistant.components.sensor: debug
+    homeassistant.util.package: debug
+    custom_components: debug
+    custom_components.beewi_smartclim: debug
 
 config:
 
@@ -140,4 +149,4 @@ group: !include groups.yaml
 automation: !include_dir_list automations/
 script: !include_dir_merge_named scripts/
 zone: !include zones.yaml
-timer: !include timers.yaml
+# timer: !include timers.yaml
