--- a/devices/sensors.yaml
+++ b/devices/sensors.yaml
@@ -1,32 +1,48 @@
 - platform: yr
-# - platform: mqtt
-#   name: Exterior Temperature
-#   state_topic: "ble/exterior/temperature"
-#   unit_of_measurement: "°C"
-# - platform: mqtt
-#   name: Exterior Humidity
-#   state_topic: "ble/exterior/humidity"
-#   unit_of_measurement: "%"
-- platform: mitemp_bt
-  mac: !secret mac_temp_mi_dormitori
-  monitored_conditions:
-    - temperature
-    - humidity
-  scan_interval: 60
-  median: 1
-  name: Dormitori
-- platform: mitemp_bt
-  mac: !secret mac_temp_mi_menjador
-  monitored_conditions:
-    - temperature
-    - humidity
-  scan_interval: 60
-  median: 1
-  name: Menjador
-- platform: beewi_smartclim
-  mac: !secret mac_temp_beewi_exterior
-  name: Exterior
-  scan_interval: 60
+- platform: mqtt
+  name: Exterior Temperature MQTT
+  state_topic: "ble/exterior/temperature"
+  unit_of_measurement: "°C"
+- platform: mqtt
+  name: Exterior Humidity MQTT
+  state_topic: "ble/exterior/humidity"
+  unit_of_measurement: "%"
+- platform: mqtt
+  name: Dormitori Temperature MQTT
+  state_topic: "ble/dormitori/temperature"
+  unit_of_measurement: "°C"
+- platform: mqtt
+  name: Dormitori Humidity MQTT
+  state_topic: "ble/dormitori/humidity"
+  unit_of_measurement: "%"
+- platform: mqtt
+  name: Menjador Temperature MQTT
+  state_topic: "ble/menjador/temperature"
+  unit_of_measurement: "°C"
+- platform: mqtt
+  name: Menjador Humidity MQTT
+  state_topic: "ble/menjador/humidity"
+  unit_of_measurement: "%"
+# - platform: mitemp_bt
+#   mac: !secret mac_temp_mi_dormitori
+#   monitored_conditions:
+#     - temperature
+#     - humidity
+#   scan_interval: 60
+#   median: 1
+#   name: Dormitori
+# - platform: mitemp_bt
+#   mac: !secret mac_temp_mi_menjador
+#   monitored_conditions:
+#     - temperature
+#     - humidity
+#   scan_interval: 60
+#   median: 1
+#   name: Menjador
+# - platform: beewi_smartclim
+#   mac: !secret mac_temp_beewi_exterior
+#   name: Exterior
+#   scan_interval: 60
 - platform: github
   access_token: !secret github_access_token
   repositories:
