--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -18,8 +18,8 @@ resources:
     url: /local/simple-weather-card.bundle.js?v=0.3.0
   - type: module
     url: /local/simple-thermostat.js?v=1
-  - type: module
-    url: /local/compact-custom-header.js?v=0.0.1
+  - url: /local/custom-lovelace/compact-custom-header/compact-custom-header.js?v=0.0.1
+    type: module
   - type: module
     url: /local/button-card.js
   - type: js
