--- a/devices/sensors.yaml
+++ b/devices/sensors.yaml
@@ -28,7 +28,9 @@
 #   monitored_conditions:
 #     - temperature
 #     - humidity
-#   scan_interval: 60
+#   scan_interval: 120
+#   retries: 1
+#   timeout: 10
 #   median: 1
 #   name: Dormitori
 # - platform: mitemp_bt
@@ -36,17 +38,19 @@
 #   monitored_conditions:
 #     - temperature
 #     - humidity
-#   scan_interval: 60
+#   scan_interval: 120
+#   retries: 1
+#   timeout: 10
 #   median: 1
 #   name: Menjador
 # - platform: beewi_smartclim
 #   mac: !secret mac_temp_beewi_exterior
 #   name: Exterior
 #   scan_interval: 60
-- platform: github
-  access_token: !secret github_access_token
-  repositories:
-    - path: "alemuro/ha-conf"
+# - platform: github
+#   access_token: !secret github_access_token
+#   repositories:
+#     - path: "alemuro/ha-conf"
 - platform: waqi
   token: !secret waqi_api_key
   locations:
@@ -97,8 +101,8 @@
     - 'time_utc'
     - 'beat'
 - platform: tmb
-  app_id: 5c16345e
-  app_key: 9d234e1b963e90908b9b09b093d2c475
+  app_id: !secret tmb_app_id
+  app_key: !secret tmb_app_key
   stops:
     - line: V25
       stop: 1051
