--- a/automations/heater/climate_dormitori_set_19_afternoon.yaml
+++ b/automations/heater/climate_dormitori_set_19_afternoon.yaml
@@ -1,12 +1,17 @@
-alias: 'Turn lights on when sun setting'
+alias: 'Set dormitori climate to 19 at afternoon'
 initial_state: true
 trigger:
-  - platform: sun
-    event: sunset
-    offset: "00:05:00"
+  - platform: time_pattern
+    minutes: "/5"
 condition:
   condition: and
   conditions:
+    - condition: time
+      after: "22:00:00"
+      before: "22:59:00"
+    - condition: numeric_state
+      entity_id: sensor.exterior_temperature_mqtt
+      below: 15
     - condition: or
       conditions:
         - condition: state
@@ -25,17 +30,9 @@ condition:
           entity_id: light.sofa
           state: 'on'
 action:
-  - service: light.turn_on
-    entity_id: light.detras_de_la_tele 
+  - service: climate.set_temperature
+    entity_id: climate.dormitori
     data:
-      brightness: 10
-      color_temp: 454
-      transition: 30
-  - service: light.turn_on
-    entity_id: light.entrada 
-    data:
-      transition: 30
-
-    # - condition: state
-    #   entity_id: light.detras_de_la_tele
-    #   state: 'off'
+      temperature: 19
+  - service: climate.turn_on
+    entity_id: climate.dormitori
